@@ -38,6 +38,7 @@ Changelog
  * Fix: Inform user when moving a page from one parent to another where there is an already existing page with the same slug (Casper Timmers)
  * Fix: User add/edit forms now support form widgets with JS/CSS media (Damian Grinwis)
  * Fix: Rich text processing now preserves non-breaking spaces instead of converting them to normal spaces (Wesley van Lee)
+ * Fix: Prevent autocomplete dropdowns from appearing over date choosers on Chrome (Kevin Howbrook)
 
 
 2.4 (19.12.2018)
